{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 14,
  "lineage": "027ec34d-df16-5fd5-c495-1b2a6e44e2a4",
  "resources": [
    {
      "module": "module.nic",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "datapublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ff4b8dcc-265a-4fdf-9501-146b37e6ac66/resourceGroups/dev-rg/providers/Microsoft.Network/publicIPAddresses/pip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.191.211.179",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip1",
            "resource_group_name": "dev-rg",
            "sku": "Standard"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nic",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "datasubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ff4b8dcc-265a-4fdf-9501-146b37e6ac66/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-subnet",
            "name": "dev-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nic",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mynic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/ff4b8dcc-265a-4fdf-9501-146b37e6ac66/resourceGroups/dev-rg/providers/Microsoft.Network/networkInterfaces/nic1",
            "internal_domain_name_suffix": "onheozppnteetpqtbggaplnoza.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff4b8dcc-265a-4fdf-9501-146b37e6ac66/resourceGroups/dev-rg/providers/Microsoft.Network/publicIPAddresses/pip1",
                "subnet_id": "/subscriptions/ff4b8dcc-265a-4fdf-9501-146b37e6ac66/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "nic1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "dev-rg"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nic1",
            "resource_group_name": "dev-rg",
            "subscription_id": "ff4b8dcc-265a-4fdf-9501-146b37e6ac66"
          },
          "dependencies": [
            "module.nic.data.azurerm_public_ip.datapublicip",
            "module.nic.data.azurerm_subnet.datasubnet",
            "module.pip.azurerm_public_ip.ankit_public_ip",
            "module.rg.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.ankit_subnet",
            "module.vnet.azurerm_virtual_network.polaris-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_nrj",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsg1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff4b8dcc-265a-4fdf-9501-146b37e6ac66/resourceGroups/dev-rg/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "location": "eastus",
            "name": "nsg1",
            "resource_group_name": "dev-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg1",
            "resource_group_name": "dev-rg",
            "subscription_id": "ff4b8dcc-265a-4fdf-9501-146b37e6ac66"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_association",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "data_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "assoc1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/ff4b8dcc-265a-4fdf-9501-146b37e6ac66/resourceGroups/dev-rg/providers/Microsoft.Network/networkInterfaces/nic1",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff4b8dcc-265a-4fdf-9501-146b37e6ac66/resourceGroups/dev-rg/providers/Microsoft.Network/publicIPAddresses/pip1",
                "subnet_id": "/subscriptions/ff4b8dcc-265a-4fdf-9501-146b37e6ac66/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "nic1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "dev-rg"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nsg_association",
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "data_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "assoc1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff4b8dcc-265a-4fdf-9501-146b37e6ac66/resourceGroups/dev-rg/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "location": "eastus",
            "name": "nsg1",
            "resource_group_name": "dev-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nsg_association",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsgassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "assoc1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff4b8dcc-265a-4fdf-9501-146b37e6ac66/resourceGroups/dev-rg/providers/Microsoft.Network/networkInterfaces/nic1|/subscriptions/ff4b8dcc-265a-4fdf-9501-146b37e6ac66/resourceGroups/dev-rg/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "network_interface_id": "/subscriptions/ff4b8dcc-265a-4fdf-9501-146b37e6ac66/resourceGroups/dev-rg/providers/Microsoft.Network/networkInterfaces/nic1",
            "network_security_group_id": "/subscriptions/ff4b8dcc-265a-4fdf-9501-146b37e6ac66/resourceGroups/dev-rg/providers/Microsoft.Network/networkSecurityGroups/nsg1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nic.azurerm_network_interface.mynic",
            "module.nic.data.azurerm_public_ip.datapublicip",
            "module.nic.data.azurerm_subnet.datasubnet",
            "module.nsg.azurerm_network_security_group.nsg_nrj",
            "module.nsg_association.data.azurerm_network_interface.data_nic",
            "module.nsg_association.data.azurerm_network_security_group.data_nsg",
            "module.pip.azurerm_public_ip.ankit_public_ip",
            "module.rg.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.ankit_subnet",
            "module.vnet.azurerm_virtual_network.polaris-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.pip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ankit_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "pip1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ff4b8dcc-265a-4fdf-9501-146b37e6ac66/resourceGroups/dev-rg/providers/Microsoft.Network/publicIPAddresses/pip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.191.211.179",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip1",
            "resource_group_name": "dev-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "ankit_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "dev-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ff4b8dcc-265a-4fdf-9501-146b37e6ac66/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-subnet",
            "name": "dev-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "dev-subnet",
            "resource_group_name": "dev-rg",
            "subscription_id": "ff4b8dcc-265a-4fdf-9501-146b37e6ac66",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg",
            "module.vnet.azurerm_virtual_network.polaris-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "datanic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/ff4b8dcc-265a-4fdf-9501-146b37e6ac66/resourceGroups/dev-rg/providers/Microsoft.Network/networkInterfaces/nic1",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff4b8dcc-265a-4fdf-9501-146b37e6ac66/resourceGroups/dev-rg/providers/Microsoft.Network/publicIPAddresses/pip1",
                "subnet_id": "/subscriptions/ff4b8dcc-265a-4fdf-9501-146b37e6ac66/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "nic1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "dev-rg"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "polaris-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "dev-vnet",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "65474e73-6cef-49c8-be13-098c07adaec8",
            "id": "/subscriptions/ff4b8dcc-265a-4fdf-9501-146b37e6ac66/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet",
            "location": "eastus",
            "name": "dev-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "dev-rg"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "dev-vnet",
            "resource_group_name": "dev-rg",
            "subscription_id": "ff4b8dcc-265a-4fdf-9501-146b37e6ac66"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}